--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.3",
-    "hardhat": "^2.8.2"
+    "hardhat": "^2.8.2",
+    "hardhat-gas-reporter": "^1.0.7"
   }
 }
